--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vercel/webpack-asset-relocator-loader": "^1.7.3",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "prettier": "^3.2.5",
