--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@uiw/codemirror-theme-github": "^4.21.21",
     "@uiw/react-codemirror": "^4.21.21",
     "@vercel/kv": "^1.0.1",
+    "copy-to-clipboard": "^3.3.3",
     "next": "14.1.0",
     "random-words": "^2.0.1",
     "react": "^18",
