--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@pkl-community/pkl-eval": "^0.0.3",
     "@uiw/codemirror-theme-github": "^4.21.21",
     "@uiw/react-codemirror": "^4.21.21",
+    "@vercel/analytics": "^1.1.2",
     "@vercel/kv": "^1.0.1",
     "copy-to-clipboard": "^3.3.3",
     "next": "14.1.0",
