--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@uiw/react-codemirror": "^4.21.21",
     "@vercel/analytics": "^1.1.2",
     "@vercel/kv": "^1.0.1",
+    "@vercel/speed-insights": "^1.0.9",
     "copy-to-clipboard": "^3.3.3",
     "next": "14.1.0",
     "random-words": "^2.0.1",
