--- a/.github/workflows/publish-docker.yaml
+++ b/.github/workflows/publish-docker.yaml
@@ -1,7 +1,6 @@
 on:
   push:
-    branches: []
-    #branches: [main]
+    branches: [main]
 
 jobs:
   build-push:
@@ -36,7 +35,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          push: false
-          # push: true
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
